--- a/tsconfig.json
+++ b/tsconfig.json
@@ -54,6 +54,7 @@
     "src/typings/globals/node-file-exists/index.d.ts",
     "src/typings/globals/node/index.d.ts",
     "src/typings/globals/pathwatcher/index.d.ts",
+    "src/typings/globals/proxyquire/index.d.ts",
     "src/typings/globals/q/index.d.ts",
     "src/typings/globals/react-addons-shallow-compare/index.d.ts",
     "src/typings/globals/react-addons-test-utils/index.d.ts",
@@ -78,6 +79,7 @@
     "src/typings/tests/index.d.ts",
     "src/typings/tests/validation.d.ts",
     "src/typings/tutorial/index.d.ts",
+    "src/__mocks__/editor/index.ts",
     "src/actions.ts",
     "src/components/Common/Markdown/formatText.ts",
     "src/components/Common/Markdown/syntax-highlighter.ts",
