--- a/tsconfig.json
+++ b/tsconfig.json
@@ -55,6 +55,7 @@
     "src/typings/globals/node/index.d.ts",
     "src/typings/globals/pathwatcher/index.d.ts",
     "src/typings/globals/q/index.d.ts",
+    "src/typings/globals/radium/index.d.ts",
     "src/typings/globals/react-addons-shallow-compare/index.d.ts",
     "src/typings/globals/react-addons-test-utils/index.d.ts",
     "src/typings/globals/react-dom/index.d.ts",
@@ -80,8 +81,10 @@
     "src/typings/tutorial/index.d.ts",
     "src/__mocks__/editor/index.ts",
     "src/actions.ts",
-    "src/components/common/Markdown/formatText.ts",
-    "src/components/common/Markdown/syntax-highlighter.ts",
+    "src/components/AppMenu/common/Markdown/formatText.ts",
+    "src/components/AppMenu/common/Markdown/syntax-highlighter.ts",
+    "src/components/Common/Markdown/formatText.ts",
+    "src/components/Common/Markdown/syntax-highlighter.ts",
     "src/components/index.ts",
     "src/components/SidePanel/index.ts",
     "src/components/SidePanel/sideElement.ts",
@@ -167,6 +170,11 @@
     "src/utils/system.ts",
     "src/components/Alert/index.tsx",
     "src/components/AppMenu/CloseWindow.tsx",
+    "src/components/AppMenu/common/ContentCard.tsx",
+    "src/components/AppMenu/common/Markdown/CodeBlock.tsx",
+    "src/components/AppMenu/common/Markdown/index.tsx",
+    "src/components/AppMenu/common/RouteButton.tsx",
+    "src/components/AppMenu/common/TextEditor/index.tsx",
     "src/components/AppMenu/index.tsx",
     "src/components/AppMenu/issuesLink.tsx",
     "src/components/AppMenu/menu.spec.tsx",
@@ -175,11 +183,11 @@
     "src/components/AppMenu/menuRight.tsx",
     "src/components/AppMenu/menuRightRouteOptions.tsx",
     "src/components/AppMenu/Quit/index.tsx",
-    "src/components/common/ContentCard.tsx",
-    "src/components/common/Markdown/CodeBlock.tsx",
-    "src/components/common/Markdown/index.tsx",
-    "src/components/common/RouteButton.tsx",
-    "src/components/common/TextEditor/index.tsx",
+    "src/components/Common/ContentCard.tsx",
+    "src/components/Common/Markdown/CodeBlock.tsx",
+    "src/components/Common/Markdown/index.tsx",
+    "src/components/Common/RouteButton.tsx",
+    "src/components/Common/TextEditor/index.tsx",
     "src/components/FinalPage/index.tsx",
     "src/components/FinalPage/SeeMore.tsx",
     "src/components/Page/EditPage/index.tsx",
