--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "scripts": {
     "compile": "tsc",
+    "commit": "git-cz",
     "test": "jest",
     "mocks": "tsc -p ./src/__mocks__",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
@@ -49,6 +50,8 @@
   },
   "devDependencies": {
     "coderoad-cli": "^0.10.0",
+    "commitizen": "^2.8.6",
+    "cz-conventional-changelog": "^1.2.0",
     "electron-chromedriver": "^1.4.0",
     "eslint": "^3.8.1",
     "eslint-plugin-react": "^6.4.1",
@@ -58,11 +61,16 @@
     "react-test-renderer": "15.3.2",
     "redux-mock-store": "^1.2.1",
     "selenium-webdriver": "^3.0.0-beta-3",
+    "semantic-release": "^4.3.5",
     "spectron": "^3.4.0",
     "tslint": "^3.15.1",
     "tslint-react": "^1.1.0",
-    "typescript": "^2.0.3",
-    "semantic-release": "^4.3.5"
+    "typescript": "^2.0.3"
+  },
+   "config": {                                                                                                    
+    "commitizen": {                                                                                              
+      "path": "node_modules/cz-conventional-changelog"                                                                                
+    }                                                                                                            
   },
   "jest": {
     "verbose": true,
